Narrow projects contrast fix to card backgrounds

--- a/_sass/framework/zerostatic/blocks/sections/_projects.scss
+++ b/_sass/framework/zerostatic/blocks/sections/_projects.scss
@@ -107,22 +107,7 @@ table.person-months-table {
     display: block;
     margin-bottom: 0.75rem;
     background-color: var(--color-base-bg);
-    color: var(--color-base-text);
     box-shadow: inset 0 0 0 1px var(--color-base-bg-3);
-  }
-
-  .card-header > a {
-    color: var(--color-base-text);
-  }
-
-  #project-index {
-    .card-title a {
-      color: var(--color-base-text);
-    }
-
-    .members a {
-      color: var(--color-base-text-2);
-    }
   }
 
   .card-columns {
